--- a/server/spine-ts/index.html
+++ b/server/spine-ts/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<script src="../../build/spine-all.js"></script>
-	<link rel="stylesheet" href="../css/spine-player.css">
+	<script type="text/javascript" src="build/spine-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/spine-player.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -17,7 +17,7 @@ body {
 <body>
 	<div id="container" style="width: 1920px; height: 1080px;"></div>
 </body>
-<script src="custom_script.js"></script>
+<script type="text/javascript" src="src/custom_script.js"></script>
 
 </body>
 </html>
