--- a/server/spine-ts/index.html
+++ b/server/spine-ts/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="build/spine-all.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/spine-player.css">
+	<script type="text/javascript" src="./build/spine-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="./css/spine-player.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -19,7 +19,11 @@ body {
 </body>
 <script type="text/javascript">
 	window.addEventListener("load", () => {
-		window.SpineRuntime = new stym.Runtime();
+		const queryString = window.location.search;
+		const searchParams = new URLSearchParams(queryString);
+		const channelName = searchParams.get('channelName');
+		console.log(channelName);
+		window.SpineRuntime = new stym.Runtime(channelName);
 	});
 </script>
 
