--- a/assets/spine-ts/index.html
+++ b/assets/spine-ts/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<script type="text/javascript" src="./build/spine-all.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/spine-player.css">
+	<link rel="shortcut icon" href="./favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
