Add created time to Rooms for admin page

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -24,6 +24,7 @@
         <thead>
             <tr>
                 <th>ChannelName</th>
+                <th>CreatedAt</th>
                 <th>LastTime</th>
                 <th>Connections</th>
                 <th>Chatters</th>
