--- a/static/spine/index.html
+++ b/static/spine/index.html
@@ -16,14 +16,40 @@ body {
 </style>
 
 <body>
-	<div id="container" style="width: 1920px; height: 1080px;"></div>
+	<div id="container" style="width: 960px; height: 540px;"></div>
 </body>
 <script type="text/javascript">
+
+	function setContainerSizeFromQuery() {
+		const queryString = window.location.search;
+		const searchParams = new URLSearchParams(queryString);
+		let containerWidth = searchParams.has('width') 
+			? Number.parseInt(searchParams.get('width'))
+			: 1920;
+		let containerHeight = searchParams.has('height') 
+			? Number.parseInt(searchParams.get('height'))
+			: 1080;
+		let container = document.getElementById("container")
+		if(!Number.isInteger(containerWidth)) {
+			containerWidth = 1920;
+		}
+		if(!Number.isInteger(containerHeight)){ 
+			containerHeight = 1080;
+		}
+		containerWidth = Math.max(containerWidth, 0)
+		containerHeight = Math.max(containerHeight, 0)
+		console.log(containerWidth, containerHeight);
+		container.style.width = `${containerWidth}px`
+		container.style.height = `${containerHeight}px`
+		return [containerWidth, containerHeight];
+	}
+	
 	window.addEventListener("load", () => {
 		const queryString = window.location.search;
 		const searchParams = new URLSearchParams(queryString);
 		const channelName = searchParams.get('channelName');
-		window.SpineRuntime = new stym.Runtime(channelName);
+		const [containerWidth, containerHeight] = setContainerSizeFromQuery();
+		window.SpineRuntime = new stym.Runtime(channelName, containerWidth, containerHeight);
 	});
 </script>
 
