Add more info to admin page. Fix bugs
* Fix runtime so that a single actor failing to load doesn't break the
  runtime from loading other chibis.

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="/static/admin/css/style.css">
-	<link rel="shortcut icon" href="static/favicon.ico">
+	<link rel="shortcut icon" href="/static/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
 </head>
@@ -24,8 +24,7 @@
         <thead>
             <tr>
                 <th>ChannelName</th>
-                <th>CreatedAt</th>
-                <th>LastTime</th>
+                <th>Info</th>
                 <th>Connections</th>
                 <th>Chatters</th>
                 <th>Action</th>
@@ -36,6 +35,6 @@
         </tbody>
     </table>
 
-    <script type="text/javascript" src="static/admin/src/index.js"></script>
+    <script type="text/javascript" src="/static/admin/src/index.js"></script>
 </body>
 </html>
