--- a/static/spine/index.html
+++ b/static/spine/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="/static/spine/build/spine-all.js"></script>
-	<link rel="stylesheet" type="text/css" href="/static/spine/css/spine-player.css">
-	<link rel="shortcut icon" href="/static/favicon.ico">
+	<script type="text/javascript" src="/spine/static/build/spine-all.js"></script>
+	<link rel="stylesheet" type="text/css" href="/spine/static/css/spine-player.css">
+	<link rel="shortcut icon" href="/public/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
