--- a/static/spine/index.html
+++ b/static/spine/index.html
@@ -23,9 +23,7 @@
 
 <script type="text/javascript">
 
-	function setContainerSizeFromQuery() {
-		const queryString = window.location.search;
-		const searchParams = new URLSearchParams(queryString);
+	function setContainerSizeFromQuery(searchParams) {
 		let containerWidth = searchParams.has('width')
 			? Number.parseInt(searchParams.get('width'))
 			: 1920;
@@ -53,13 +51,24 @@
 		return [containerWidth, containerHeight];
 	}
 
+	function getRuntimeConfigFromQueryParams(searchParams) {
+		const debugMode = searchParams.get('debug') === 'true';
+		const scale = Math.max(Math.min((parseFloat(searchParams.get('scale')) || 1), 3), 0.1);
+		const [containerWidth, containerHeight] = setContainerSizeFromQuery(searchParams);
+		return {
+			width: containerWidth,
+			height: containerHeight,
+			debugMode: debugMode,
+			chibiScale: scale
+		}
+	}
+
 	window.addEventListener("load", () => {
 		const queryString = window.location.search;
 		const searchParams = new URLSearchParams(queryString);
 		const channelName = searchParams.get('channelName');
-		const debugMode = searchParams.get('debug') === 'true';
-		const [containerWidth, containerHeight] = setContainerSizeFromQuery();
-		window.SpineRuntime = new stym.Runtime(channelName, containerWidth, containerHeight, debugMode);
+		const config = getRuntimeConfigFromQueryParams(searchParams);
+		window.SpineRuntime = new stym.Runtime(channelName, config);
 		// window.ControlCam = new stym.ControlCam(
 		// 	"custom_container", 
 		// 	containerWidth, 
